bugfix/etsl-411 fixed header and footer alignment issue on mobile,ipad view

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
@@ -220,6 +220,10 @@
 .footer-links-logo-section .flex-container .footer-links-nav {
   margin-bottom: 2rem;
 
+  @include respond-to-max($tablet) {
+      padding: 0 toRem(8);
+    }
+  
   @media (min-width: 992px) {
     margin-bottom: 1rem;
     text-align: left;
@@ -503,7 +507,6 @@
   .footer-links-logo-section img {
     float: none;
     height: none;
-    margin-left: 3rem;
     margin-right: none;
     text-align: none;
     width: 260px;
@@ -513,7 +516,6 @@
     float: inherit;
     line-height: 2.2;
     margin-bottom: 1rem;
-    margin-left: -1rem;
     width: 100%;
   }
 }
@@ -1074,7 +1076,6 @@
 		border-left: 1px solid #e5e5e5;
 		padding-right: 1.5rem;
 		padding-left: 1.5rem;
-		line-height: 34px;
 		border-right: 1px solid #e5e5e5;
 		margin-right: -4px
 	}
